[project]
name = "pytasklist"
version = "0.4"
description = "descript goes here"
readme = "README.md"
requires-python = ">=2.7"
authors = [{name = "moojor224"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/moojor224/pytasklist"
Changelog = "https://github.com/moojor224/pytasklist/releases"
Issues = "https://github.com/moojor224/pytasklist/issues"
CI = "https://github.com/moojor224/pytasklist/actions"


[project.optional-dependencies]
test = ["pytest"]

[tool.distutils.bdist_wheel]
universal = true